# guimbat

./: AGENTS.md  Cargo.toml  README.md
assets/: icon.icns  make_icon.swift
src/: main.rs
